fix spacing sizes

--- a/src/06-components/molecules/link-text-box/link-text-box.scss
+++ b/src/06-components/molecules/link-text-box/link-text-box.scss
@@ -2,16 +2,9 @@
 @import '../../../02-sass-tools/utils';
 
 .sc-link-text-box {
-
   @include mqmin($viewportL) {
     display: flex;
   }
-  
-  // .sc-anchor-list {
-  //   @include mqmin($viewportL) {
-  //     flex-grow: 1;
-  //   }
-  // }
 }
 
 .sc-link-text-box__text {
@@ -44,5 +37,16 @@
 .sc-link-text-box-group {
   .sc-link-text-box {
     border-bottom: 1px solid $black-30;
+    margin-top: $XXXL;
+    padding-bottom: $XXXL;
+
+    @include mqmin($viewportM) {
+      margin-top: $XXXXL;
+      padding-bottom: $XXXXL;
+    }
+
+    &:first-child {
+      margin-top: 0;
+    }
   }
 }
