--- a/src/06-components/molecules/media-section/media-section.scss
+++ b/src/06-components/molecules/media-section/media-section.scss
@@ -48,5 +48,17 @@
 .sc-media-section-list {
   .sc-media-section {
     border-bottom: 1px solid $black-30;
+    margin-top: $XXXL;
+    padding-bottom: $XXXL;
+
+    @include mqmin($viewportM) {
+      margin-top: $XXXXL;
+      padding-bottom: $XXXXL;
+    }
+
+    &:first-child {
+      margin-top: 0;
+    }
   }
 }
+
